applies welcome buttons styles and fixes alignment

--- a/client/src/Components/UserProfile/UserProfile.scss
+++ b/client/src/Components/UserProfile/UserProfile.scss
@@ -67,3 +67,17 @@
     }
   }
 }
+
+@media screen and (max-width: 850px) {
+  .UserProfile {
+    .user-preferences,
+    .user-profile-edit {
+      .user-preferences-form,
+      .user-profile-form {
+        width: 300px;
+        margin: 0;
+        padding: 10px;
+      } 
+    }
+  }
+}
