--- a/client/src/Components/Welcome/Welcome.scss
+++ b/client/src/Components/Welcome/Welcome.scss
@@ -45,9 +45,10 @@
       align-items: center;
       justify-content: center;
       border-radius: 2px;
+      box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.6);
       border: none;
-      background: #1CB841;
-      color: white;
+      background: #ffffffe3;
+      color: #000;
       cursor: pointer;
       transition: 0.3s;
       font-size: 20px;
@@ -65,13 +66,12 @@
         overflow: hidden;
       }
       &:hover {
-        color: white;
-        background-color: rgb(50, 50, 50);
+        background: #ffffff;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
       }
     }
   }
   .create-account-form {
-    display: flex;
     flex-direction: column;
     align-items: center;
     width: 500px;
@@ -106,7 +106,10 @@
 
 @media screen and (max-width: 850px) {
   .Welcome {
-    grid-template-columns: 75%;
+    grid-template-columns: 90%;
     grid-template-rows: 50% 50%;
+    .welcome-controls {
+      padding: 0;
+    }
   }
 }
